src/objects/Apttus_Config2__ExternalOrderSummaryItem__c.object
<CustomObject>
    <description>Represents a product or service line item associated with an external order summary</description>
    <fields>
        <fullName>APTS_AccountBuyingGroup__c</fullName>
        <formula>Apttus_Config2__SoldToAccountId__r.Purchasing_Organization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Buying Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Account_Sold_To__c</fullName>
        <formula>Apttus_Config2__OrderSummaryId__r.Apttus_CMConfig__AgreementId__r.APTS_Sold_To__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Account (Sold To)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Calculate_Rebate_On__c</fullName>
        <label>Calculate Rebate On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JDE Invoice</fullName>
                </value>
                <value>
                    <fullName>Sellout Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coffee</fullName>
                </value>
                <value>
                    <fullName>Tea</fullName>
                </value>
                <value>
                    <fullName>&amp;More</fullName>
                </value>
                <value>
                    <fullName>Consumption Categories</fullName>
                </value>
                <value>
                    <fullName>&amp; More</fullName>
                    <isActive>false</isActive>
                    <label>&amp; More</label>
                </value>
                <value>
                    <fullName>Consumption</fullName>
                    <isActive>false</isActive>
                    <label>Consumption</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <formula>Apttus_Config2__ProductId__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SubCategoryClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Category Classification Id</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>External Order Summary Items</relationshipLabel>
        <relationshipName>External_Order_Summary_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_SubSubCategoryClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubSub Category Classification Id</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>External Order Summary Items (SubSub Category Classification Id)</relationshipLabel>
        <relationshipName>External_Order_Summary_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_SubSubcategory__c</fullName>
        <label>Sub-Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cafe Noir</fullName>
                </value>
                <value>
                    <fullName>Kenco</fullName>
                </value>
                <value>
                    <fullName>Jacobs</fullName>
                </value>
                <value>
                    <fullName>Piazza d&apos;Oro</fullName>
                </value>
                <value>
                    <fullName>Douwe Egberts</fullName>
                </value>
                <value>
                    <fullName>Gevalia</fullName>
                </value>
                <value>
                    <fullName>Nordic Roast</fullName>
                </value>
                <value>
                    <fullName>Cafax</fullName>
                </value>
                <value>
                    <fullName>Laurentis</fullName>
                </value>
                <value>
                    <fullName>Friele</fullName>
                </value>
                <value>
                    <fullName>Krone</fullName>
                </value>
                <value>
                    <fullName>Norwegian Roast</fullName>
                </value>
                <value>
                    <fullName>House of Coffee</fullName>
                </value>
                <value>
                    <fullName>Illy</fullName>
                </value>
                <value>
                    <fullName>Marcilla</fullName>
                </value>
                <value>
                    <fullName>Marcilla - Professional</fullName>
                </value>
                <value>
                    <fullName>Saimaza</fullName>
                </value>
                <value>
                    <fullName>Saimaza - Professional</fullName>
                </value>
                <value>
                    <fullName>Soley</fullName>
                </value>
                <value>
                    <fullName>HAG</fullName>
                </value>
                <value>
                    <fullName>Splendid</fullName>
                </value>
                <value>
                    <fullName>Jacqmotte</fullName>
                </value>
                <value>
                    <fullName>Karat</fullName>
                </value>
                <value>
                    <fullName>Maxwell House</fullName>
                </value>
                <value>
                    <fullName>Private Label</fullName>
                </value>
                <value>
                    <fullName>Mellow Birds</fullName>
                </value>
                <value>
                    <fullName>Non-branded</fullName>
                </value>
                <value>
                    <fullName>Rappor</fullName>
                </value>
                <value>
                    <fullName>Jacobs (Mix)</fullName>
                </value>
                <value>
                    <fullName>Maxwell House (Mix)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beans</fullName>
                </value>
                <value>
                    <fullName>Fresh Brew</fullName>
                </value>
                <value>
                    <fullName>Filter Coffee</fullName>
                </value>
                <value>
                    <fullName>Coffee Capsules</fullName>
                </value>
                <value>
                    <fullName>Coffee Pads</fullName>
                </value>
                <value>
                    <fullName>Ice Coffee</fullName>
                </value>
                <value>
                    <fullName>Coffee Pods</fullName>
                </value>
                <value>
                    <fullName>Pickwick Professional</fullName>
                </value>
                <value>
                    <fullName>Pickwick Volume Pack</fullName>
                </value>
                <value>
                    <fullName>Pickwick Tea Master Selection</fullName>
                </value>
                <value>
                    <fullName>Pickwick Slow Tea</fullName>
                </value>
                <value>
                    <fullName>Pickwick Machine Tea</fullName>
                </value>
                <value>
                    <fullName>Pickwick Retail</fullName>
                </value>
                <value>
                    <fullName>Pickwick Adventure Loose Leaf</fullName>
                </value>
                <value>
                    <fullName>Other Tea Brands</fullName>
                </value>
                <value>
                    <fullName>Sugar</fullName>
                </value>
                <value>
                    <fullName>Milk</fullName>
                </value>
                <value>
                    <fullName>Cups</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Soup</fullName>
                </value>
                <value>
                    <fullName>Coffee Syrup</fullName>
                </value>
                <value>
                    <fullName>Biscuits &amp; Chocolates</fullName>
                </value>
                <value>
                    <fullName>Sweeteners</fullName>
                </value>
                <value>
                    <fullName>Stirrers</fullName>
                </value>
                <value>
                    <fullName>Glasses &amp; Porcelain</fullName>
                </value>
                <value>
                    <fullName>Tea display</fullName>
                </value>
                <value>
                    <fullName>Accessoires</fullName>
                </value>
                <value>
                    <fullName>Cleaners</fullName>
                </value>
                <value>
                    <fullName>Merchandise</fullName>
                </value>
                <value>
                    <fullName>Beverages</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <formula>Apttus_Config2__OrderSummaryId__r.Apttus_CMConfig__AgreementId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Summary Items (Bill To)</relationshipLabel>
        <relationshipName>OrderSummaryItemsBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The line description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveBenefitAmount__c</fullName>
        <description>The total incentive benefit amount</description>
        <inlineHelpText>The total incentive benefit amount</inlineHelpText>
        <label>Incentive Benefit Amount</label>
        <summarizedField>Apttus_Config2__ExternalOrderAdjustmentItem__c.Apttus_Config2__IncentiveAdjustmentAmount__c</summarizedField>
        <summaryForeignKey>Apttus_Config2__ExternalOrderAdjustmentItem__c.Apttus_Config2__LineItemId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ListPrice__c</fullName>
        <description>The list price for the product or service</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NetPrice__c</fullName>
        <description>The net price for the product or service</description>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NetUnitPrice__c</fullName>
        <description>The net unit price for the product or service</description>
        <inlineHelpText>The net unit price for the product or service</inlineHelpText>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderSummaryId__c</fullName>
        <description>ID of the associated external summary order</description>
        <inlineHelpText>ID of the associated external summary order</inlineHelpText>
        <label>Order Summary</label>
        <referenceTo>Apttus_Config2__ExternalOrderSummary__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodEndDate__c</fullName>
        <description>The period end date</description>
        <inlineHelpText>The period end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PeriodStartDate__c</fullName>
        <description>The period start date</description>
        <inlineHelpText>The period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCategory__c</fullName>
        <description>One or more categories associated with the product</description>
        <label>Product Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product or service</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Summary Items</relationshipLabel>
        <relationshipName>OrderSummaryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductUom__c</fullName>
        <description>The product or service unit of measure</description>
        <label>Product Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Quantity__c</fullName>
        <description>The product or service quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SellingFrequency__c</fullName>
        <description>The selling frequency associated with the recurring or usage price</description>
        <label>Selling Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SellingUom__c</fullName>
        <description>The selling unit of measure for the product</description>
        <inlineHelpText>The selling unit of measure for the product</inlineHelpText>
        <label>Selling Uom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Summary Items (Ship To)</relationshipLabel>
        <relationshipName>OrderSummaryItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SoldToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the sold to account</description>
        <inlineHelpText>ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Summary Items (Sold To)</relationshipLabel>
        <relationshipName>OrderSummaryItemsSoldTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The status indicator</description>
        <inlineHelpText>The status indicator</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready for Incentive Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External Order Summary Item</label>
    <nameField>
        <displayFormat>EOI-{0000000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Order Summary Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>